# whyhow

./: .env.sample  .gitignore  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
api/: index.html
docs/: api.md  index.md  installation.md  tutorial.md
examples/: create_graph_from_csv.ipynb  create_graph_from_questions.ipynb  create_graph_from_schema.ipynb  demo.ipynb
examples/assets/: specialists.csv  specialists.json
installation/: index.html
search/: search_index.json
src/whyhow/: __init__.py  client.py  exceptions.py  validations.py
src/whyhow/apis/: __init__.py  base.py  graph.py
src/whyhow/schemas/: __init__.py  base.py  common.py  graph.py
tests/: conftest.py  test_client.py  test_dummy.py
tests/apis/: test_graph.py
tests/schemas/: test_common.py
tutorial/: index.html
