[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "whyhow"
authors = [
    {name = "Tom Smoker", email = "tom@whyhow.ai"},
    {name = "Chris Rec", email = "chris@whyhow.ai"}
]
description = "Whyhow automated KG SDK"
keywords = ["SDK", "KG"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic>1",
]
dynamic = ["version"]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "bandit[toml]",
    "black",
    "flake8",
    "flake8-docstrings",
    "fpdf",
    "isort",
    "mypy",
    "pydocstyle[toml]",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpx",
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "pymdown-extensions",
]

[project.urls]
Homepage = "https://github.com/whyhow-ai/whyhow"

[project.scripts]

[tool.setuptools]
zip-safe = false
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.typed"]

[tool.setuptools.dynamic]
version = {attr = "whyhow.__version__"}

[tool.pydocstyle]
convention = "numpy"
add-ignore = "D301"

[tool.bandit]

[tool.black]
line-length = 79
preview = true

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:There is no current event loop",
]
testpaths = [
    "tests",
]
addopts = "--cov=src/ -v --cov-report=term-missing --durations=20"
log_cli = false
